Use kbfstool to create kbfsd.sock

--- a/kbfsd.in
+++ b/kbfsd.in
@@ -95,7 +95,7 @@ kbfsd_prestart()
 	# "/home/${kbfsd_user}/.config/keybase/keybased.sock" and
 	# "/home/${kbfsd_user}/.config/keybase/kbfsd.sock" are present.
 	su -l "${kbfsd_user}" -c "%%LOCALBASE%%/bin/keybase login ${kbfsd_keybase_username}" > /dev/null 2>&1
-	su -l "${kbfsd_user}" -c "%%LOCALBASE%%/bin/keybase fs ls ${kbfsd_mountpoint} > /dev/null 2>&1"
+	su -l "${kbfsd_user}" -c "%%LOCALBASE%%/bin/kbfstool stat ${kbfsd_mountpoint} > /dev/null 2>&1"
 	for _f in \
 	    "/home/${kbfsd_user}/.config/keybase/kbfsd.sock" \
 	    "/home/${kbfsd_user}/.config/keybase/keybased.sock"
