--- a/kbfsd.in
+++ b/kbfsd.in
@@ -58,7 +58,7 @@ command_args="-p ${pidfile} %%LOCALBASE%%/bin/kbfsfuse -log-to-file ${kbfsd_moun
 start_precmd="kbfsd_prestart"
 stop_postcmd="kbfsd_poststop"
 
-required_modules='fusefs'
+required_modules='fuse~fuse'
 
 kbfsd_prestart()
 {
