--- a/kbfsd.in
+++ b/kbfsd.in
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: BSD-2-Clause
 #
-# Copyright (c) 2018, 2019 Mateusz Piotrowski <0mp@FreeBSD.org>
+# Copyright (c) 2018-2020 Mateusz Piotrowski <0mp@FreeBSD.org>
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -33,8 +33,6 @@
 
 name='kbfsd'
 rcvar='kbfsd_enable'
-
-load_rc_config 'kbfsd'
 
 # Default settings.
 : "${kbfsd_enable:=no}"
@@ -122,6 +120,7 @@ kbfsd_poststop()
 	umount "${kbfsd_mountpoint}" > /dev/null 2>&1
 }
 
+load_rc_config "${name}"
 run_rc_command "$1"
 
 # vim: filetype=sh softtabstop=8 shiftwidth=8 tabstop=8 noexpandtab
